<resources>
    <string name="app_name">百事通电影</string>
    <string name="shimmer">百事通电影</string>
    <string name="tab_hotrecomm">热门推荐</string>
    <string name="tab_catogory">电影分类</string>
    <string name="tab_sortlist">排行榜</string>
    <string name="tab_album">专辑</string>
    <string name="rab_search">搜索</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_cate_type">类型</string>
    <string name="cd_cate_year">年份</string>
    <string name="cd_cate_direct">导演</string>
    <string name="cd_cate_area">地区</string>
    <string name="cd_cate_live">直播</string>
    <string name="cd_cate_actor">演员</string>


    <!-- viewpager 标题栏字体-->
    <string name="fzlt_zhun_hei">FZLTZHUNHEI_GBK.ttf</string>
    <string name="fzlt_cu_hei">FZLTHC_GBK.ttf</string>

    <string name="nav_tab_normal_ttf">@string/fzlt_zhun_hei</string>
    <string name="nav_tab_focus_ttf">@string/fzlt_cu_hei</string>
    <string name="pay_ok">付费确认</string>
    <string name="title_activity_exo_video">ExoVideoActivity</string>


    <string name="evp_submit">快进</string>
    <string name="evp_retry">快退</string>


    <string name="application_name">ExoPlayer2 Demo</string>

    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="retry">Retry</string>

    <string name="selection_disabled">Disabled</string>

    <string name="selection_default">Default</string>

    <string name="selection_default_none">Default (none)</string>

    <string name="unexpected_intent_action">Unexpected intent action: </string>

    <string name="enable_random_adaptation">Enable random adaptation</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for </string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for </string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder </string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="error">错误</string>
    <string name="pay_preview_confirm">预览结束</string>

</resources>
